2009-12-18  Ramon Novoa  <rnovoa@artica.es>

	* windows/pandora_wmi.cc: Fixed bug #2907481.

	* bin/PandoraAgent.exe: Updated to current revision.
	
	* installer/pandora.mpi, pandora.cc: Updated build.

2009-12-16  Raul Mateos  <raulofpandora@gmail.com>

	* installer/pandora.mpi, README:Preparing release
	changing version to final.

	* installer/logo.png: Updated logo.

2009-11-26  Ramon Novoa  <rnovoa@artica.es>

	* installer/pandora.mpi: Updated version and silent install mode.

	* pandora_windows_service.cc: Set the path from the agent to avoid
	  having to reboot. Fixed a typo.

	* pandora.cc: Updated version.

2009-11-26  Raul Mateos  <raulofpandora@gmail.com>

	* installer/pandora.mpi: Updated installer build to RC3.

2009-11-24  Ramon Novoa  <rnovoa@artica.es>

	* installer/pandora_silent.mpi: Removed from repository. Merged changes
	  into pandora.mpi.

	* installer/pandora.mpi: Merged with pandora_silent.mpi.

	* pandora.cc: Updated version string.

2009-11-19  Ramon Novoa  <rnovoa@artica.es>

	* windows/pandora_wmi.cc: Fixed bug #2895307.

	* modules/pandora_module.cc: Fixed bug #2835450.

	* bin/pandora_agent.conf: Added xml_buffer configuration token.

	* ssh/libssh2/libssh2_config.h, ssh/libssh2/packet.c: Renamed usleep to
	  u_sleep to avoid conflicts.

	* pandora_windows_service.cc: Fixed bug #2899257.

2009-11-17  Sancho Lerena <slerena@artica.es>

	* Installer/Pandora_silent.mpi: Installer in silent mode. Should
	replace pandora.mpi in the future, includes both, using a command
	line to choose standard or un-attended install.

2009-10-17  Sancho Lerena <slerena@artica.es>

	* configure.in: Modified path to libregex.a instead original boost
	library name (very large and complex). This should be fix with the 
	library package uploaded in sourceforge and compile nicely (works
	for me :-)

2009-10-15  Ramon Novoa  <rnovoa@artica.es>

	* windows_service.cc: Enable service recovery by default.
